[gd_scene load_steps=7 format=2]

[ext_resource path="res://fuentes/snow_kei/Snow Kei.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Escenas/EscenaNuevoNivel.gd" type="Script" id=2]
[ext_resource path="res://Recursos/fondos/31314.jpg" type="Texture" id=3]
[ext_resource path="res://Recursos/BGM/Arex's Beat.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.939606
margin_bottom = -0.939575
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1285.0
margin_bottom = 721.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -317.5
margin_right = 317.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 251.0
margin_right = 635.0
margin_bottom = 469.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 635.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.494118, 0, 1 )
text = "NUEVO NIVEL ALCANZADO!"

[node name="Monedas" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 635.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.494118, 0, 1 )
text = "UTILIZAR MONEDAS"

[node name="SiguienteNivel" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 635.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.494118, 0, 1 )
text = "SIGUIENTE NIVEL"

[node name="Salir" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 635.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.494118, 0, 1 )
text = "SALIR"

[node name="MusicaFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/Monedas" to="." method="_on_Monedas_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SiguienteNivel" to="." method="_on_SiguienteNivel_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
